--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# env configuration
+requirements.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -128,6 +131,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+selenium_env
 .env
 .venv
 env/
