prepared for review

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     regression: marker for regression tests
 	login_guest: for login tests as guest user
     new: marker for debugging new test cases 
+    need_review: for stepik final lesson review
